--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ a {
 
       <div class="project">
         <a href="project3 - paktea.html" class="project-box">
-          <img src="pakteanohours.jpg" alt="Project 3">
+          <img src="pakteatest.png" alt="Project 3">
         </a>
         <p class="project-title">PAK TEA HOUSE (PRINT)</p>
       </div>
