--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ a {
     <div class="grid">
       <div class="project">
         <a href="project1 - realism.html" class="project-box">
-          <img src="Art103FINAL.png" alt="Project 1">
+          <img src="artfinal.png" alt="Project 1">
         </a>
         <p class="project-title">REALISM MANIFESTO (PRINT)</p>
       </div>
