--- a/project1 - realism.html
+++ b/project1 - realism.html
@@ -299,7 +299,7 @@ a {
  <header class="header">
   <nav>
     <div><p>JOANNA CLAIR STEWART</p></div>
-    <div> <a href="1 - Main Page.html" class="home-link">HOME</a></div>
+    <div> <a href="index.html" class="home-link">HOME</a></div>
   </nav>
 </header>
 
@@ -328,7 +328,7 @@ a {
 
      <!-- Big image -->
     <div class="big-image">
-      <img src="Art103FINAL.png" alt="">
+      <img src="artfinal.png" alt="">
     </div>
 
 
