--- a/project6 - bgs.html
+++ b/project6 - bgs.html
@@ -299,7 +299,7 @@ a {
  <header class="header">
   <nav>
     <div><p>JOANNA CLAIR STEWART</p></div>
-    <div> <a href="1 - Main Page.html" class="home-link">HOME</a></div>
+    <div> <a href="index.html" class="home-link">HOME</a></div>
   </nav>
 </header>
 
@@ -330,7 +330,7 @@ a {
 
 <!-- Column of small images -->
     <div class="small-images">
-      <div class="small-box"><img src="BGSConcert.png" alt=""></div>
+      <div class="small-box"><img src="bgsconcertss.png" alt=""></div>
       <div class="small-box"><img src="bgscopyminiwoverlay.jpg" alt=""></div>
      
     </div>
