--- a/project9 - clic.html
+++ b/project9 - clic.html
@@ -262,7 +262,7 @@ a {
 }
 
 .small-box img {
-  width: 100%;
+  width: auto;
   height: 100%;
   object-fit: cover;
   display: block;
@@ -299,7 +299,7 @@ a {
  <header class="header">
   <nav>
     <div><p>JOANNA CLAIR STEWART</p></div>
-    <div> <a href="1 - Main Page.html" class="home-link">HOME</a></div>
+    <div> <a href="index.html" class="home-link">HOME</a></div>
   </nav>
 </header>
 
