--- a/project10 - rec.html
+++ b/project10 - rec.html
@@ -270,6 +270,12 @@ a {
   display: block;
 }
 
+.big-image2 img {
+  display: block;
+  width: auto;   /* use natural width */
+  height: auto;  /* maintain aspect ratio */
+  max-height: 400px; /* optional limit */
+}
 
 </style>
 </style>
@@ -282,7 +288,7 @@ a {
  <header class="header">
   <nav>
     <div><p>JOANNA CLAIR STEWART</p></div>
-    <div> <a href="1 - Main Page.html" class="home-link">HOME</a></div>
+    <div> <a href="index.html" class="home-link">HOME</a></div>
   </nav>
 </header>
 
@@ -312,12 +318,12 @@ a {
     <div class="big-image">
       <img src="recstickersmodel.png" alt="">
     </div>
-<div class="big-image">
+<div class="big-image2">
       <img src="recstickersflat.jpg" alt="">
     </div>
 
 
-<
+
 
 </div>
 </div>
