--- a/project3 - paktea.html
+++ b/project3 - paktea.html
@@ -299,7 +299,7 @@ a {
  <header class="header">
   <nav>
     <div><p>JOANNA CLAIR STEWART</p></div>
-    <div> <a href="1 - Main Page.html" class="home-link">HOME</a></div>
+    <div> <a href="index.html" class="home-link">HOME</a></div>
   </nav>
 </header>
 
