--- a/project8 - merch.html
+++ b/project8 - merch.html
@@ -299,7 +299,7 @@ a {
  <header class="header">
   <nav>
     <div><p>JOANNA CLAIR STEWART</p></div>
-    <div> <a href="1 - Main Page.html" class="home-link">HOME</a></div>
+    <div> <a href="../index.html" class="home-link">HOME</a></div>
   </nav>
 </header>
 
@@ -326,7 +326,7 @@ a {
 
      <!-- Big image -->
     <div class="big-image">
-      <img src="navyhoodie.png" alt="">
+      <img src="hoodie-web2.jpg" alt="">
     </div>
 
 
